# mkdocs-rsoxs

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-docs-best-practices.md  api.md  configuration.md  contributing.md  index.md
pages/docs/extensions/: toc.md
pages/docs/plugins/: mkdocstrings.md
scripts/: generate-als-tokens.mjs
shadcn/: main.html
shadcn/css/: base.css
shadcn/plugins/mixins/: mkdocstrings.py
src/mkdocs_rsoxs/: __init__.py  filters.py  jinja_plugin.py  main.html  mkdocs_theme.yml
src/mkdocs_rsoxs/components/: mobile_nav_tree.html
src/mkdocs_rsoxs/css/: base.css
src/mkdocs_rsoxs/extensions/: codexec.py  hover_card.py  iconify.py
src/mkdocs_rsoxs/js/: callbacks.js  copy-button.js
src/mkdocs_rsoxs/plugins/: _router.py  autonumber.py  excalidraw.py  search.py
src/mkdocs_rsoxs/plugins/mixins/: dev.py  git.py  katex.py  markdown.py  mkdocstrings.py  order.py  table.py
src/mkdocs_rsoxs/templates/: bottom_sidebar.html  footer.html  header.html  page.html  seo.html
tailwind/: als-content.css  als-tokens.css  article.css  codehilite.css  footer.css  main.css  mkdocstrings.css  mobile-menu.css  shadcn.css  table.css
tests/: conftest.py  test_browser.py  test_mkdocs_rsoxs.py
