[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs_rsoxs"
version = "0.1.3"
description = "A mkdocs theme for als rsoxs projects"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.13"
authors = [
    { name = "Harlan D Heilman", email = "73567020+HarlanHeilman@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = []
dependencies = [
    "bottle>=0.13.4",
    "gitpython>=3.1.47",
    "mkdocs>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "hatch>=1.16.3",
    "prek>=0.1.0",
    "pysentry-rs>=0.1.0",
    "typer>=0.24.2",
    "pytest-playwright>=0.7.2",
]
docs = [
    "mkdocstrings-python>=2.0.1",
    "pymdown-extensions>=10.0.0",
]

[project.entry-points."mkdocs.themes"]
rsoxs = "mkdocs_rsoxs"

[project.entry-points."mkdocs.plugins"]
rsoxs = "mkdocs_rsoxs.jinja_plugin:RsoxsJinjaPlugin"

[project.urls]
Homepage = "https://github.com/als-rsoxs/mkdocs-rsoxs"
Documentation = "https://als-rsoxs.github.io/mkdocs-rsoxs"
Repository = "https://github.com/als-rsoxs/mkdocs-rsoxs"
Issues = "https://github.com/als-rsoxs/mkdocs-rsoxs/issues"
Changelog = "https://github.com/als-rsoxs/mkdocs-rsoxs/blob/main/CHANGELOG.md"

# =============================================================================
# Hatch
# =============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_rsoxs"]

# Matrix testing across Python versions
[tool.hatch.envs.test]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "B010",   # monkey-patching server hooks intentionally
    "E501",   # line-too-long: many generated/html/js snippets
    "RUF012", # mutable-class-default: legacy extension APIs
]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_rsoxs"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]

# =============================================================================
# ty (Astral type checker)
# =============================================================================

[tool.ty.src]
include = ["**/*.py"]

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/mkdocs_rsoxs"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true

# =============================================================================
# git-cliff (Changelog generation)
# =============================================================================

[tool.git-cliff]
config = "cliff.toml"
